<resources>
    <string name="app_name">SOHO</string>
    <string name="電子郵件">電子郵件</string>
    <string name="確認電子郵件">確認電子郵件</string>
    <string name="密碼">密碼</string>
    <string name="姓名">姓名</string>
    <string name="性別">性別</string>
    <string name="男">男</string>
    <string name="女">女</string>
    <string name="註冊">註冊</string>
    <string name="以FACEBOOK帳戶註冊">以FACEBOOK帳戶註冊</string>
    <string name="person_info">個人資料</string>
    <string name="etName">姓名</string>
    <string name="etCompany">公司</string>
    <string name="etWorkExperience">工作經歷</string>
    <string name="etExpertise">專長</string>
    <string name="etLive">居住地</string>
    <string name="etPhone">聯絡電話</string>
    <string name="etLine">Line</string>
    <string name="cag_nav_home">Home</string>
    <string name="cag_nav_member">Member</string>
    <string name="cag_nav_message">Message</string>
    <string name="cag_nav_settings">Setting</string>
    <string name="cag_nav_case">Case</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_Home">Home</string>
    <string name="cag_nav_mail">Message</string>
    <string name="caseoverview">案件總覽</string>
    <string name="applycase">申請案件</string>
    <string name="postcase">發佈案件</string>
    <string name="application">申請中</string>
    <string name="processing">進行中</string>
    <string name="ending">已結案</string>
    <string name="add_case_title">新增案件</string>
    <string name="msg_NoCases">無任何案子</string>
    <string name="msg_NoNetwork">未連結到網路</string>
    <string name="msg_InsertFail">新增失敗</string>
    <string name="msg_InsertSuccess">新增成功</string>
    <string name="case_detail">案件說明</string>
    <string name="msg_NoMember">無任何會員</string>
    <string name="確認密碼">確認密碼</string>
    <string name="cancelapplication">取消申請</string>
    <string name="cancel">取消</string>
    <string name="evaluation">評價</string>
    <string name="add_album_title">作品集</string>

    <string-array name="city">
        <item>臺北市</item>
        <item>新北市</item>
        <item>桃園市</item>
        <item>臺中市</item>
        <item>臺南市</item>
        <item>高雄市</item>
        <item>基隆市</item>
        <item>新竹市</item>
        <item>嘉義市</item>
        <item>新竹縣</item>
        <item>苗栗縣</item>
        <item>彰化縣</item>
        <item>南投縣</item>
        <item>雲林縣</item>
        <item>嘉義縣</item>
        <item>屏東縣</item>
        <item>宜蘭縣</item>
        <item>花蓮縣</item>
        <item>臺東縣</item>
        <item>澎湖縣</item>
        <item>金門縣</item>
        <item>連江縣</item>
    </string-array>
    <string-array name="category">
        <item>文字編輯及翻譯</item>
        <item>網頁設計及開發</item>
        <item>企劃行銷及銷售</item>
        <item>平面設計及多媒體 </item>
        <item>網路及軟體設計</item>
        <item>服務支援與代工</item>
    </string-array>
</resources>
