<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/cag_item_Home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/cag_nav_home" />
    <item
        android:id="@+id/cag_item_Mail"
        android:icon="@drawable/ic_mail_outline_black_24dp"
        android:title="@string/cag_nav_message" />
    <item
        android:id="@+id/cag_item_case"
        android:icon="@drawable/ic_case"
        android:title="@string/cag_nav_case" />
    <item
        android:id="@+id/cag_item_Member"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/cag_nav_member" />
    <item
        android:id="@+id/cag_item_Settimg"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/cag_nav_settings" />
</menu>