<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:ems="10"
                android:hint="@string/電子郵件"
                android:inputType="text" />

            <EditText
                android:id="@+id/etConfirmEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:ems="10"
                android:hint="@string/確認電子郵件"
                android:inputType="text" />

            <EditText
                android:id="@+id/etPassWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:ems="10"
                android:hint="@string/密碼"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:ems="10"
                android:hint="@string/姓名"
                android:inputType="textPersonName" />

            <RadioGroup
                android:id="@+id/rgSex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSex"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/性別"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rbMen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:checked="true"
                    android:text="@string/男" />

                <RadioButton
                    android:id="@+id/rbWomen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/女" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btRegister"
                    android:layout_width="250dp"
                    android:layout_height="35dp"
                    android:layout_margin="15dp"
                    android:background="@drawable/registerbt"
                    android:layout_gravity="center"
                    android:text="@string/註冊"
                    android:textStyle="bold"
                    android:textColor="#fff"/>

                <Button
                    android:id="@+id/btFbRegister"
                    android:layout_width="250dp"
                    android:layout_height="35dp"
                    android:layout_margin="15dp"
                    android:background="@drawable/fb_btregister"
                    android:layout_gravity="center"
                    android:text="@string/以FACEBOOK帳戶註冊"
                    android:textStyle="bold"
                    android:textColor="#fff"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>