<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/caseview_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/caseoverview"
                android:textSize="20sp" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:id="@+id/tab_applicationcase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/applycase" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_postcase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/postcase" />

        </android.support.design.widget.TabLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:id="@+id/tabLayout">

            <android.support.design.widget.TabItem
                android:id="@+id/tab_application"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/application" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_processing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/processing" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_ending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ending" />

        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tabLayout" />

    </RelativeLayout>


</LinearLayout>