<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:design="http://schemas.android.com/tools"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/person_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvToolbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/person_info"
                        android:textSize="20sp" />

                </RelativeLayout>

            </android.support.v7.widget.Toolbar>

            <ImageView
                android:id="@+id/iVUser"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/user" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <TextView
                    android:id="@+id/eTName"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:hint="@string/etName"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:padding="10dp" />

                <RadioGroup
                    android:id="@+id/rgGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_toEndOf="@+id/eTName"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tVSex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:text="@string/性別"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/rbMen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/男" />

                    <RadioButton
                        android:id="@+id/rbWomen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/女" />

                </RadioGroup>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/btTrack"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/heart" />

                <Button
                    android:id="@+id/btGallery"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="40dp"
                    android:background="@drawable/gallery" />

                <Button
                    android:id="@+id/btEvaluation"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="40dp"
                    android:background="@drawable/evaluation" />
                <Button
                    android:id="@+id/btEdit"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="40dp"
                    android:background="@drawable/edit"/>

            </LinearLayout>


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:orientation="vertical"
                android:paddingBottom="50dp">

                <TextView
                    android:id="@+id/etCompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/etCompany"
                     />

                <TextView
                    android:id="@+id/etWorkExperience"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/etWorkExperience"
                     />

                <TextView
                    android:id="@+id/etExpertise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/etExpertise"
                     />

                <TextView
                    android:id="@+id/etLive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/etLive"
                     />

                <TextView
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:hint="@string/etPhone"
                    />

                <TextView
                    android:id="@+id/etLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:hint="@string/etLine"
                     />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>